--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 
 /* Variables */
 :root {
-  --main-color: #06d6a0;
+  --main-color: #F9AE00;
   --main-text-color: #FFF;
   --border-color: #999;
   --bio-bg-color: #1E2A3A;
